   Javelin and [GM]. [MG]
 * Translation updates and messages fixes by Stoko.
 * Help fixes by Todd@M*U*S*H, Steve Varley, Wiggles and others. [MG]
 * @message now takes a /silent and /noisy switch, the same as @pemit, with
   the default controlled by the silent_pemit @config option. message()
   is now silent, like pemit(). Suggested by Padraic. [MG]

Fixes:
 * When regexp matching an ansi'd string, named captures weren't set
   at all.  For non-ansi'd strings, non-named (numeric) captures were
   sometimes overwritten with the values of named captures. Reported
   by Sketch. [MG]
 * The configure script incorrectly reported that ssl_slave was
   unavailable when told to disable it via
   --disable-ssl_slave. Reported by Cheetah. [MG]
 * Sound from an AUDIBLE wagon object used to propagate into other
   wagon objects in the same location with an @listen of *. It now
   does so again.  Reported by Xeero and Padraic. [MG]
 * Sound will now also propagate through two @listens, instead of just
   one, as it used to. Reported by Mac@M*U*S*H. [MG]
 * Loading a reboot db is more robust. Inspired by Padraic. [SW]
 * scan() couldn't be used by rooms. Reported by Padraic. [MG]
 * Possible crashbug in the queue triggered by events reported by
   Rince@Wing Commander: New Horizon. [MG]
 * @list attribute would show duplicates for aliases. [MG]
 * insert(,foo,-1) no longer appends an extra delimiter. [MG]
 * @function/clone didn't work correctly, and could potentially cause
   a crash. [MG]
 * @clone didn't respect Many_Attribs. [MG]
 * Making a connection to a ssl port on a game not using ssl_slave
   could hang the mush. Reported by Minion. [SW]
 * @cemit and friends would notify you twice if you cemited to a channel
   you weren't on. Reported by spork. [MG]
 * regrep() could try to read uninitialized memory. [SW]
 * Fix a possible DOS from a local attacker. [SW]
 * Fix a couple of possible memory leaks. [MG]