@@ -87,6 +87,11 @@ Minor changes:
  * @message now takes a /silent and /noisy switch, the same as @pemit, with
    the default controlled by the silent_pemit @config option. message()
    is now silent, like pemit(). Suggested by Padraic. [MG]
+ * The MUSH can now negotiate its character set with clients. There's still
+   only one charset available, but now the client can know exactly what it's
+   receiving. Suggested by Sketch. [MG] Make sure your MUSH is running in the
+   right charset; see http://tinyurl.com/penn-charset for more information.
+   
 
 Fixes:
  * When regexp matching an ansi'd string, named captures weren't set
